--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             srcset="https://cdn.prod.website-files.com/67b750ba743993c0107d2a26/67b75114c9115baae7dca6ed_1200px-HP_logo_2012.svg-p-500.png 500w, https://cdn.prod.website-files.com/67b750ba743993c0107d2a26/67b75114c9115baae7dca6ed_1200px-HP_logo_2012.svg-p-800.png 800w, https://cdn.prod.website-files.com/67b750ba743993c0107d2a26/67b75114c9115baae7dca6ed_1200px-HP_logo_2012.svg-p-1080.png 1080w, https://cdn.prod.website-files.com/67b750ba743993c0107d2a26/67b75114c9115baae7dca6ed_1200px-HP_logo_2012.svg.png 1200w"
             alt="" class="image" />
         <h1 class="heading">HP Customer Support</h1>
-        <section class="section"><a href="tel:1-877-419-4507" class="button w-button">Tel : +1-877-419-4507</a>
+        <section class="section"><a href="tel:1-877-419-4507" class="button w-button">Tel : +1 (877) 419-4507</a>
             <p class="paragraph">It looks like you&#x27;re outlining a service offering for printer repair, maintenance,
                 and setup. Here&#x27;s a revised version of your message to make it more polished and engaging:</p>
         </section>
